changed the line-height to be more SEO friendly and fixed html by adding class to h2 for spacing mb-5

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -36,7 +36,7 @@ h1 {
   font-family: var(--default-font-family);
   font-weight: normal;
   font-size: 24px;
-  line-height: 2;
+  line-height: 1.5;
 }
 
 .btn-branding {
